fix: reduce border spacing on tables

--- a/app/assets/stylesheets/dmpopidor/_tables.scss
+++ b/app/assets/stylesheets/dmpopidor/_tables.scss
@@ -9,6 +9,7 @@
   .table {
     border: none;
     border-collapse: separate;
+    border-spacing: 0;
 
     // Header cells
 
